--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,13 @@
 {
-  "extends": "vue",
+  "extends": [
+    "eslint:recommended",
+    "plugin:vue/recommended"
+  ],
   "rules": {
     "import/no-unresolved": 0,
-    "import/no-unassigned-import": 0
+    "import/no-unassigned-import": 0,
+    "vue/html-no-self-closing": "error",
+    "semi": ["error", "never"],
+    "no-console": "off"
   }
 }
