--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   ],
   "dependencies": {
     "babel-runtime": "^6.18.0",
+    "lodash": "^4.17.4",
     "promise-polyfill": "^6.0.2",
     "vue": "^2.2.0",
     "vue-router": "^2.0.0",
@@ -47,6 +48,7 @@
     "vuex-router-sync": "^4.0.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.67",
     "autoprefixer": "^6.4.0",
     "babel-core": "^6.16.0",
     "babel-loader": "^6.2.4",
@@ -55,8 +57,9 @@
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
+    "eslint": "^4.1.1",
     "eslint-config-vue": "latest",
-    "eslint-plugin-vue": "^2.1.0",
+    "eslint-plugin-vue": "beta",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.9.0",
