--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
-node_modules
-*.log
 .DS_Store
-/dist
+node_modules/
+dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
