--- a/package.json
+++ b/package.json
@@ -1,83 +1,70 @@
 {
   "name": "veturpack",
-  "version": "0.1.0",
-  "description": "Vuepack adapted for Vetur.",
-  "main": "client/index.js",
-  "scripts": {
-    "test": "",
-    "build": "webpack --config build/webpack.prod.js",
-    "dev": "node build/server.js",
-    "lint": "xo **/client/**/*.{vue,js} !node_modules/**"
-  },
+  "version": "1.0.0",
+  "description": "Veturpack based on webpack template for trying Vue 2.5 types",
   "author": "Pine Wu <octref@gmail.com>",
-  "license": "MIT",
-  "xo": {
-    "extends": "./.eslintrc",
-    "esnext": true,
-    "envs": [
-      "browser"
-    ]
+  "private": true,
+  "scripts": {
+    "dev": "node build/dev-server.js",
+    "start": "node build/dev-server.js",
+    "build": "node build/build.js",
+    "lint": "eslint --ext .js,.vue src"
   },
-  "babel": {
-    "presets": [
-      [
-        "vue-app",
-        {
-          "useBuiltIns": true
-        }
-      ]
-    ]
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {},
-      "postcss-nested": {}
-    }
-  },
-  "browserslist": [
-    "last 2 versions",
-    "ie > 8"
-  ],
   "dependencies": {
-    "babel-runtime": "^6.26.0",
-    "lodash": "^4.17.4",
-    "promise-polyfill": "^6.0.2",
-    "vue": "^2.4.4",
-    "vue-router": "^2.7.0",
-    "vuex": "^2.4.0",
-    "vuex-router-sync": "^4.3.2"
+    "vue": "HerringtonDarkholme/vue#new-type",
+    "vue-router": "ktsn/vue-router#adapt-new-typings"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.74",
-    "autoprefixer": "^7.1.4",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-vue-app": "^1.3.0",
-    "chalk": "^2.1.0",
+    "autoprefixer": "^7.1.2",
+    "babel-core": "^6.22.1",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-env": "^1.3.2",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "chalk": "^2.0.1",
+    "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.7.1",
-    "eslint-config-vue": "latest",
-    "eslint-plugin-vue": "beta",
-    "express": "^4.15.4",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
-    "node-sass": "^4.5.3",
-    "offline-plugin": "^4.8.3",
-    "postcss-loader": "^2.0.6",
-    "postcss-nested": "^2.1.2",
-    "raw-loader": "^0.5.1",
-    "rimraf": "^2.6.2",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "vue-loader": "^13.0.5",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "3.6.0",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.19.1",
-    "xo": "^0.18.2"
-  }
+    "css-loader": "^0.28.0",
+    "cssnano": "^3.10.0",
+    "eslint": "^3.19.0",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-html": "^3.0.0",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^2.0.1",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.14.1",
+    "extract-text-webpack-plugin": "^2.0.0",
+    "file-loader": "^0.11.1",
+    "friendly-errors-webpack-plugin": "^1.1.3",
+    "html-webpack-plugin": "^2.28.0",
+    "http-proxy-middleware": "^0.17.3",
+    "webpack-bundle-analyzer": "^2.2.1",
+    "semver": "^5.3.0",
+    "shelljs": "^0.7.6",
+    "opn": "^5.1.0",
+    "optimize-css-assets-webpack-plugin": "^2.0.0",
+    "ora": "^1.2.0",
+    "rimraf": "^2.6.0",
+    "url-loader": "^0.5.8",
+    "vue-loader": "^13.0.4",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.4.2",
+    "webpack": "^2.6.1",
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-merge": "^4.1.0"
+  },
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
