--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 // Place your settings in this file to overwrite default and user settings.
 {
-  "vetur.validation.template": false
+  "vetur.validation.template": false,
+  "prettier.eslintIntegration": true
 }
