--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "lodash": "^4.17.4",
+    "prettier": "^1.7.4",
+    "prettier-eslint-cli": "^4.4.0",
     "promise-polyfill": "^6.0.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
