--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "commonjs",
     "strict": true,
     "noUnusedLocals": true,
+    "noImplicitAny": true,
     "outDir": "dist",
     "sourceMap": true,
     "lib": [
