--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "prettier": "^1.7.4",
     "prettier-eslint-cli": "^4.4.0",
     "promise-polyfill": "^6.0.2",
-    "vue": "^2.5.2",
+    "vue": "2.5.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0"
