--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "sourceMap": true,
     "lib": [
       "es5", "es2015.collection", "es2015.promise", "dom", "es2016.array.include"
-    ]
+    ],
+    "allowJs": true
   }
 }
