--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "copy-webpack-plugin": "^4.1.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
-    "eslint": "^4.13.1",
-    "eslint-plugin-vue": "^4.0.0-beta.2",
+    "eslint": "^4.18.2",
+    "eslint-plugin-vue": "^4.3.0",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.5",
