--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 // Place your settings in this file to overwrite default and user settings.
 {
   "vetur.validation.template": false,
-  "prettier.eslintIntegration": true
+  "editor.detectIndentation": false,
+  "editor.tabSize": 4
 }
