--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "lodash": "^4.17.4",
+    "prettier-eslint": "^8.8.2",
     "promise-polyfill": "^6.0.2",
     "vue": "^2.5.3",
     "vue-router": "^3.0.1",
@@ -68,7 +69,6 @@
     "postcss-loader": "^2.0.7",
     "postcss-nested": "^2.1.2",
     "prettier": "^1.15.2",
-    "prettier-eslint-cli": "^4.4.0",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
