Update some settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 // Place your settings in this file to overwrite default and user settings.
 {
-  "vetur.validation.template": false,
-  "prettier.eslintIntegration": true
+  "vetur.experimental.templateInterpolationService": true
 }
